Fixed alignment of Current Residence on search page

--- a/static/scss/search-page.scss
+++ b/static/scss/search-page.scss
@@ -384,3 +384,14 @@
     padding: 0 75px;
   }
 }
+
+.sk-hierarchical-menu-list {
+  width: 100%;
+
+  .sk-hierarchical-menu-list__hierarchical-options > div {
+    align-items: stretch;
+    margin-left: 10px;
+    margin-right: 10px;
+
+  }
+}
